fix broken style on new-inspection dialog

--- a/web/src/app/dialogs/new-inspection/new-inspection.component.scss
+++ b/web/src/app/dialogs/new-inspection/new-inspection.component.scss
@@ -50,7 +50,6 @@ mat-step {
 
   .mat-horizontal-content-container {
     padding: 0px 24px 0px 24px;
-    flex: 1;
   }
 }
 
